# securegen

./: README.md  jest.config.js  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/features/history/: History.tsx
components/features/passphrase-generator/: PassphraseGenerator.tsx
components/features/password-generator/: PasswordGenerator.tsx
components/features/settings/: Settings.tsx
components/features/username-generator/: UsernameGenerator.tsx
components/layout/: AppLayout.tsx  CustomTitlebar.tsx  Sidebar.tsx
components/providers/: StorageProvider.tsx  ThemeProvider.tsx
components/ui/: button.tsx  select.tsx  sonner.tsx  tabs.tsx  textarea.tsx  theme-toggle.tsx
hooks/: useGenerator.ts  useSystemTray.ts  useWindowWidth.ts
lib/: STORAGE_IMPLEMENTATION_PLAN.md  hardware-id.ts  storage-enhanced.ts  storage-migration.ts  store.ts  tauri.ts  validations.ts
lib/__tests__/: storage-enhanced.test.ts
lib/password/: README.md  config.ts  example.ts  hash.ts  index.ts  migration.ts  policy.ts  strength.ts  types.ts  validate.ts
lib/password/__tests__/: password.test.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_output.txt
src-tauri/src/: main.rs
src-tauri/src/generators/: eff_wordlist.rs  mod.rs  passphrase.rs  password.rs  username.rs  username_forwarders_unit_tests.rs  username_integration_tests.rs
src-tauri/src/generators/username_forwarders/: addyio.rs  duckduckgo.rs  fastmail.rs  firefox.rs  forwardemail.rs  mod.rs  simplelogin.rs
types/: index.ts  tauri.ts
